# Clinic_Medicine_Search

./: CLAUDE.md  app.js  commit_message_rule.md  index.html  package-lock.json  package.json  pyproject.toml  pytest.ini  search_result.css  search_result.html  search_result.js  storage_location.css  storage_location.html  storage_location.js  style.css  vite.config.js
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
clinic_backend/: settings.py  urls.py
css/: common.css  search_result.css  storage_location.css  style.css
data/: drugs.json
drugs/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
drugs/management/commands/: import_drugs.py
drugs/migrations/: 0001_initial.py
html/: index.html  search_result.html  storage_location.html
js/: app.js  drugDatabase.js  search_result.js  storage_location.js
